--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5",
-    "vue-sonner": "^1.2.1"
+    "vue-sonner": "^1.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
